--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -10,16 +10,20 @@
 
     <main class="container">
 
+        <% include ../static/partials/messages.ejs %>
+
         <h1>New Wiki</h1>
 
         <form action="/wikis/create" method="post">
             <div class="form-group">
-                <label for="title">Wiki title</label>
-                <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Title">
+                <label for="title">Wiki Title</label>
+                <input type="text" class="form-control" name="title" aria-describedby="titleHelp" placeholder="Enter Wiki Title">
+                <small class="text-muted" id="titleHelp">Title must be 2 or more characters in length.</small>
             </div>
             <div class="form-group">
-                <label for="body">Wiki body</label>
-                <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
+                <label for="body">Wiki Content</label>
+                <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki Body"></textarea>
+                <small class="text-muted" id="bodyHelp">Body must be 10 or more characters in length.</small>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
