--- a/src/views/users/show.ejs
+++ b/src/views/users/show.ejs
@@ -51,10 +51,12 @@ Zip Code: Any 5 Digit Number
 
     <hr>
     <h2>Your Wikis</h2>
+    <% if(wikis[0] === undefined) { %>
+    <p>No wikis yet. Try creating some!</p>
+    <% } else { %>
     <ul class="list-group">
       <% if(wikis) { %>
       <% wikis.forEach((wiki) => { %>
-      <li>
       <li class="list-group-item">
         <a href="/wikis/<%= wiki.id %>">
           <%= wiki.title %>
@@ -65,6 +67,24 @@ Zip Code: Any 5 Digit Number
       <% }) %>
       <% } %>
     </ul>
+    <% } %>
+    <% if(currentUser) { %>
+    <% if(collaborators[0]) { %>
+    <hr>
+    <h2>Wikis Collaboratorating On:</h2>
+    <ul class="list-unstyled">
+      <% collaborators.forEach((collaborator) => { %>
+      <li class="list-group-item">
+        <a href="/wikis/<%= collaborator.Wiki.id %>">
+          <%= collaborator.Wiki.title %>
+        </a>
+        <span>[
+          <%= collaborator.Wiki.private ? 'private' : 'public' %>]</span>
+      </li>
+      <% }) %>
+    </ul>
+    <% } %>
+    <% } %>
 
   </main>
   <% include ../static/partials/baseScripts.ejs %>
